--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,7 +8,6 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -18,12 +17,12 @@ jobs:
         with:
           github_user_name: oandresantoss
           outputs: |
-            ./github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake.svg
 
-      - name: Push to GitHub Pages branch
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
-          branch: output
-          folder: .
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
